--- a/vulkan-haskell.cabal
+++ b/vulkan-haskell.cabal
@@ -39,6 +39,9 @@ executable vulkan-haskell
     , text
     , time
     , with-utf8
+    , vulkan
+    , sdl2
+    , vector
 
   mixins:
     base hiding (Prelude),
