--- a/haskell-vulkan.cabal
+++ b/haskell-vulkan.cabal
@@ -28,7 +28,15 @@ executable haskell-vulkan
     -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
+    other-extensions: FlexibleInstances
+                    , GeneralizedNewtypeDeriving
+                    , MultiParamTypeClasses
+                    , TypeOperators
+                    , UndecidableInstances
+                    , GADTs
+                    , KindSignatures
+                    
     build-depends:    base ^>=4.14.3.0
-    hs-source-dirs:   app
+                    , fused-effects
+    hs-source-dirs:   src
     default-language: Haskell2010
